--- a/estilo.css
+++ b/estilo.css
@@ -34,8 +34,8 @@ html,body{
 
 
 #geral{
+    margin-top: 25px;
     width: 100%;
-    height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
